--- a/Frontend/public/assets/css/dettaglio_account_privato.css
+++ b/Frontend/public/assets/css/dettaglio_account_privato.css
@@ -797,3 +797,17 @@
 .icon-xs {
     font-size: 14px !important;
 }
+
+/* --- Mobile/PWA Helper: Visually Hidden Inputs --- */
+.visually-hidden-input {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border: 0;
+    visibility: hidden;
+}
